Fixed register/login link not visible with dark mode

--- a/src/components/RegisterHeader.module.css
+++ b/src/components/RegisterHeader.module.css
@@ -24,6 +24,7 @@
     padding-bottom: 5%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 5%;
 }
 
 .name {
@@ -34,5 +35,5 @@
     text-align: center;
     color: white;
     font-size: 110%;
-   padding-bottom: 10px;
+    padding: 10px;
 }
